tests/baselines/reference/objectLiteralWithSemicolons4.errors.txt
tests/cases/compiler/objectLiteralWithSemicolons4.ts(3,1): error TS1005: ':' expected.


==== tests/cases/compiler/objectLiteralWithSemicolons4.ts (1 errors) ====
    var v = {
      a
    ;
    ~
!!! error TS1005: ':' expected.